avatar size fix for contributors on firefox stable for mac

--- a/site/css/src/templates/_globals.scss
+++ b/site/css/src/templates/_globals.scss
@@ -90,6 +90,7 @@
 }
 
 .contributor-avatar {
-  width: 800px;
-  max-width: 100%;
+  height: auto;
+  max-width: 400px;
+  width: 100%;
 }
